--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "date-fns": "^2.29.3",
     "fs-extra": "^10.1.0",
     "mongoose": "^6.7.2",
     "nestjs-typegoose": "^7.1.38",
@@ -43,7 +42,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "sharp": "^0.31.2"
+    "sharp": "^0.31.2",
+    "transliteration": "^2.3.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
